# python-alteon

./: .bumpversion.cfg  .pre-commit-config.yaml  Dockerfile  README.md  dev.sh  pyproject.toml  setup.py
.circleci/: config.yml
.github/workflows/: checks.yaml  unit-tests.yaml
pyalteon/: __init__.py  __version__.py  _compat.py  _endpoint.py  _helpers.py  client.py
pyalteon/vadc/: __init__.py  group.py  real.py  virt.py
pyalteon/vx/: __init__.py  vadc.py
