[build-system]
requires = ["poetry_core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "pyalteon"
version = "0.1.0"
description = "Python interface to the Radware Alteon REST API"
license = "BSD-3-Clause"
authors = ["Andrew Teixeira <teixeira@broadinstitute.org>"]
readme = "README.md"
repository = "https://github.com/broadinstitute/python-alteon.git"
homepage = "https://github.com/broadinstitute/python-alteon.git"
keywords = ["radware", "alteon"]

[tool.poetry.dependencies]
python = "^3.7"  # Compatible python versions must be declared here

requests = "*"
toml = "^0.10"

[tool.poetry.dev-dependencies]
bump2version = "*"
coverage = "*"
fixtures = "*"
green = ">=2.12.0"
mock = ">=2.0.0"
pydocstyle = "<7"
# 2.5.0 breaks pylama 8.3.8
pyflakes = "<3.1.0"
pylama = "*"
pylint = "*"
responses = "*"
testtools = "*"
twine = "*"
unittest2 = ">=1.1.0"
wheel = "*"
yamllint = "*"
